# ortholidar

./: .gitignore  CMakeLists.txt  README.md
loader/: Ortholidar  loader.sh  ortholidar
src/: KDTree.cpp  KDTree.h  Timer.cpp  Timer.h  main.cpp  misc.cpp  misc.h
src/containers/: Color.h  Point3d.cpp  Point3d.h  Vector3d.cpp  Vector3d.h
src/io/: Las.cpp  Las.h
src/operations/: KDTree.cpp  KDTree.h  misc.h  normals.cpp  normals.h
